<resources>
    <string name="app_name">NotesApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_color">Color</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="choose_color">Choose a color:</string>

    <string name="search">Search</string>
    <string name="image">image</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="note_title">Note Title</string>
    <string name="description">Description</string>
    <string name="editfab">editFab</string>

    <string name="settings">Settings</string>
    <string name="pref_title_theme">Dark theme</string>
    <string name="pref_description_theme">Turn on dark theme</string>
    <string name="pref_title_default_question">Default question</string>
    <string name="pref_title_subject_order">Subject order</string>
    <string name="pref_none">None</string>

    <string name="note_location">Location: Lat: %1$s, Lon: %2$s</string>


    <string-array name="pref_subject_order">
        <item>Alphabetic</item>
        <item>Newest first</item>
        <item>Oldest first</item>
    </string-array>

    <string-array name="pref_subject_order_values">
        <item>alpha</item>
        <item>new_first</item>
        <item>old_first</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notes_app">Notes App</string>
    <string name="notes_app_logo">Notes App Logo</string>
    <string name="get_location">Get Location</string>
    <string name="location_lat_0_0_lon_0_0">Location: Lat: 0.0, Lon: 0.0</string>
    <string name="enter_location">Enter Location</string>
</resources>