<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="dark_theme"
        app:title="@string/pref_title_theme" />

    <ListPreference
        app:defaultValue="alpha"
        app:entries="@array/pref_subject_order"
        app:entryValues="@array/pref_subject_order_values"
        app:key="subject_order"
        app:title="@string/pref_title_subject_order"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:key="default_question"
        app:title="@string/pref_title_default_question"
        app:useSimpleSummaryProvider="true" />
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>