<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            tools:context=".UpdateNoteFragment">

            <!-- Heading -->
            <TextView
                android:id="@+id/editNoteHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/edit_note"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:textSize="24sp" />

            <!-- Title -->
            <EditText
                android:id="@+id/editNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/editNoteHeading"
                android:layout_marginTop="16dp"
                android:background="@drawable/pinkborder"
                android:fontFamily="@font/poppins"
                android:hint="@string/enter_the_title"
                android:maxLines="1"
                android:padding="12dp"
                android:textSize="20sp" />

            <!-- Description -->
            <EditText
                android:id="@+id/editNoteDesc"
                android:layout_width="391dp"
                android:layout_height="558dp"
                android:layout_below="@id/editNoteTitle"
                android:layout_marginTop="12dp"
                android:autoLink="web"
                android:background="@drawable/pinkborder"
                android:fontFamily="@font/poppins"
                android:gravity="top"
                android:hint="@string/enter_the_description"
                android:linksClickable="true"
                android:padding="12dp"
                android:textSize="18sp" />


            <!-- Location Icon Button  -->
            <ImageButton
                android:id="@+id/editLocationButton"
                android:layout_width="53dp"
                android:layout_height="48dp"
                android:layout_alignTop="@id/editNoteDesc"
                android:layout_alignEnd="@id/editNoteDesc"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/get_location"
                android:padding="4dp"
                android:src="@drawable/baseline_location_on_24" />

            <!-- Floating Action Button -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/editNoteFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/pink"
                android:contentDescription="@string/editfab"
                android:src="@drawable/baseline_done_24" />

        </RelativeLayout>
    </ScrollView>
</layout>
